deprecated-Meldungen behoben